# create

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake.yml
filestandards/: CMakeLists.txt  LICENSE  README.md  class.cpp  class.hpp  cmake.yml  config.conf  config.cpp  config.hpp  header.hpp  install.sh  main.cpp  main.hpp  source.cpp
inc/: config.hpp  create.cpp  create.hpp
src/: create.cpp
